# fontman

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  justfile  pyproject.toml  setup.cfg  terminal.webm  tox.ini  tox.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  tests.yml
src/fontman/: __init__.py  _cli.py  _errors.py  _install.py  _list.py  _remove.py  _update.py  cli.py  main.py  tools.py
tests/: test_cli.py
