[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fontman"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Utilities"
]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "appdirs",
    "requests",
    "rich"
]

[project.urls]
Code = "https://github.com/nschloe/fontman"
Issues = "https://github.com/nschloe/fontman/issues"
Funding = "https://github.com/sponsors/nschloe"

[project.scripts]
fontman = "fontman:cli"
