[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "fontman"
version = "0.1.5"
description = "Manage and update your installed fonts"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Nico Schlömer", email = "nico.schloemer@gmail.com" } ]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "platformdirs",
  "requests",
  "rich",
]

urls.Code = "https://github.com/nschloe/fontman"
urls.Funding = "https://github.com/sponsors/nschloe"
urls.Issues = "https://github.com/nschloe/fontman/issues"
scripts.fontman = "fontman:cli"

[tool.mypy]
ignore_missing_imports = true
