[metadata]
name = fontman
version = 0.0.3
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Manage and update your installed fonts
url = https://github.com/nschloe/fontman
project_urls =
    Code=https://github.com/nschloe/fontman
    Issues=https://github.com/nschloe/fontman/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
install_requires =
    appdirs
    requests
    rich
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    fontman = fontman:cli
